--- a/basic/Python Crash Course Exercises .ipynb
+++ b/basic/Python Crash Course Exercises .ipynb
@@ -408,34 +408,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def caught_speeding(speed, is_birthday):\n",
-    "\n",
-    "    if is_birthday == True:\n",
-    "        if speed <= 65:\n",
-    "            return 'No Ticket'\n",
-    "        elif (speed > 65 & speed <=85):\n",
-    "            return 'Small Ticket'\n",
-    "        else:\n",
-    "            print('WHY???')\n",
-    "            return 'Big Ticket'\n",
+    "    \n",
+    "    if is_birthday:\n",
+    "        speeding = speed - 5\n",
     "    else:\n",
-    "        if speed <=60:\n",
-    "            return 'No Ticket'\n",
-    "        elif (speed>60 & speed <=80):        \n",
-    "            return 'Small Ticket'\n",
-    "        elif speed >=81:\n",
-    "            return 'Big Ticket'\n"
+    "        speeding = speed\n",
+    "    \n",
+    "    if speeding > 80:\n",
+    "        return 'Big Ticket'\n",
+    "    elif speeding > 60:\n",
+    "        return 'Small Ticket'\n",
+    "    else:\n",
+    "        return 'No Ticket'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +440,7 @@
        "'Small Ticket'"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,16 +451,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Small Ticket'"
+       "'Big Ticket'"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
