--- a/basic/SF Salaries Exercise.ipynb
+++ b/basic/SF Salaries Exercise.ipynb
@@ -28,8 +28,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd"
@@ -44,8 +46,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sal = pd.DataFrame(pd.read_csv('Salaries.csv'))"
@@ -554,26 +558,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "Year\n",
        "2011    63595.956517\n",
        "2012    65436.406857\n",
        "2013    69630.030216\n",
        "2014    66564.421924\n",
-       "dtype: float64"
+       "Name: BasePay, dtype: float64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.Series([sal[sal['Year'] == 2011]['BasePay'].mean(), sal[sal['Year'] == 2012]['BasePay'].mean(),sal[sal['Year'] == 2013]['BasePay'].mean(), sal[sal['Year'] == 2014]['BasePay'].mean()], index=[2011,2012,2013,2014])"
+    "pd.Series([sal[sal['Year'] == 2011]['BasePay'].mean(), sal[sal['Year'] == 2012]['BasePay'].mean(),sal[sal['Year'] == 2013]['BasePay'].mean(), sal[sal['Year'] == 2014]['BasePay'].mean()], index=[2011,2012,2013,2014])\n",
+    "\n",
+    "# alternative way for above question\n",
+    "sal.groupby('Year').mean()['BasePay']"
    ]
   },
   {
@@ -612,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -626,13 +634,13 @@
        "Name: JobTitle, dtype: int64"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sal['JobTitle'].value_counts().head()"
+    "sal['JobTitle'].value_counts().head(5)"
    ]
   },
   {
@@ -671,12 +679,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def chief_string(title):\n",
-    "    if 'chief' in title.lower():\n",
+    "    if 'chief' in title.lower().split():\n",
     "        return True\n",
     "    else:\n",
     "        return False"
@@ -684,16 +694,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "627"
+       "477"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,17 +721,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TotalPayBenefits</th>\n",
+       "      <th>title_len</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>TotalPayBenefits</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.036878</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>title_len</th>\n",
+       "      <td>-0.036878</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  TotalPayBenefits  title_len\n",
+       "TotalPayBenefits          1.000000  -0.036878\n",
+       "title_len                -0.036878   1.000000"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
-    "sal['title_len'] = sal['JobTitle'].apply(len)"
+    "sal['title_len'] = sal['JobTitle'].apply(len)\n",
+    "sal[['TotalPayBenefits','title_len']].corr()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -770,12 +832,13 @@
        "1 -0.036878  1.000000"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Aleternative method for the same question\n",
     "pd.DataFrame(np.corrcoef(sal['title_len'], sal['TotalPayBenefits']))"
    ]
   },
