--- a/basic/python revision.ipynb
+++ b/basic/python revision.ipynb
@@ -277,11 +277,77 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- Python is a interpreted language : it doesn't have to be compiled (other eg. PHP, ruby)\n",
+    "- Python is dynamically typed : You don't have to declare the data type of the data\n",
+    "- Python can be slow-what are the ways to optimize it?: can use c base libraries like numpy \n",
+    "- What is a python dictionary data type?: it is like a object with a key-value pair\n",
+    "- what is *args and what is **kwargs : \n",
+    "    - when you don't know how many parameters are going to be used in a function *args is used\n",
+    "    - when you don't know how many keywords you are going to use in the function u use **kwargs\n",
+    "    \n",
+    "-what is a negative index in python ?\n",
+    "\n",
+    "\n",
+    "- floor division //: divides and takes a floor of that value\n",
+    "- how to randomize a list [1,2,3,4,5] :  \n",
+    "        import random\n",
+    "        a = range(5)\n",
+    "        b = random.sample(a, len(a))\n",
+    "\n",
+    "- how is memory managed in python: memory management is done with heap space, python has built in garbage collection mechanism \n",
+    "\n",
+    "- are arguments in python passed by value or ref?\n",
+    "    - passed as objects\n",
+    "    - references point to the objects\n",
+    "    \n",
+    "- what are the mutable and immutable data types in python?\n",
+    "    - 3 mutable: changable => lists, sets, dictionaries \n",
+    "    - 3 immutable: non changeble => strings, numbers, tulple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "#example of shuffle\n",
+    "a = [1,2,3,4,5]\n",
+    "\n",
+    "from random import shuffle\n",
+    "print(shuffle(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 4, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "a = range(5)\n",
+    "b = random.sample(a, len(a))\n",
+    "print(b)"
+   ]
   },
   {
    "cell_type": "code",
